# the-theory-of-parallelism

./: README.md
Task1/: CMakeLists.txt  main.cpp  makefile
Task2/2.1/: Task2.1.xlsx  graph.py  main.c  makefile
Task2/2.2/: Task2.2.xlsx  data.txt  graph2.py  main.c  makefile
Task2/2.3/: dataFile.xlsx
Task2/2.3/2.3.1/: dataFileWithFor.xlsx  main.cpp  makefile
Task2/2.3/2.3.2/: dataFileWithoutFor.txt  main.cpp  makefile
Task3/3.1/: main.cpp  makefile  task3.1.xlsx
